--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angularfire2": "^5.0.0-rc.6",
     "core-js": "^2.4.1",
     "firebase": "^4.12.0",
+    "font-awesome": "^4.7.0",
     "redux": "^3.7.2",
     "redux-localstorage": "^0.4.1",
     "redux-logger": "^3.0.6",
