fixes on login routing

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod --vendor-chunk=true",
-    "deploy": "scp -r dist/* citame.click:/var/www/citame/widget/",
+    "deploy": "ssh citame.click 'rm -r /var/www/citame/widget/*' && scp -r dist/* citame.click:/var/www/citame/widget/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e --environment=prod"
