--- a/package.json
+++ b/package.json
@@ -14,51 +14,51 @@
   "private": true,
   "dependencies": {
     "@angular-redux/store": "^9.0.0",
-    "@angular/animations": "^6.0.4",
-    "@angular/cdk": "^6.2.1",
-    "@angular/common": "^6.0.4",
-    "@angular/compiler": "^6.0.4",
-    "@angular/core": "^6.0.4",
-    "@angular/flex-layout": "^6.0.0-beta.16",
-    "@angular/forms": "^6.0.4",
-    "@angular/http": "^6.0.4",
-    "@angular/material": "^6.2.1",
-    "@angular/platform-browser": "^6.0.4",
-    "@angular/platform-browser-dynamic": "^6.0.4",
-    "@angular/router": "^6.0.4",
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^6.4.7",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/flex-layout": "^6.0.0-beta.18",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/material": "^6.4.7",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/router": "^6.1.10",
     "angular-calendar": "^0.25.2",
-    "angularfire2": "^5.0.0-rc.10",
-    "core-js": "^2.5.7",
-    "firebase": "^5.0.4",
+    "angularfire2": "^5.1.1",
+    "core-js": "^2.6.0",
+    "firebase": "^5.7.0",
     "font-awesome": "^4.7.0",
-    "redux": "^4.0.0",
+    "redux": "^4.0.1",
     "redux-localstorage": "^0.4.1",
     "redux-logger": "^3.0.6",
     "redux-observable": "^0.19.0",
     "reselect": "^3.0.1",
-    "rxjs": "^6.2.0",
-    "rxjs-compat": "^6.2.0",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.10.6",
-    "@angular/cli": "^6.0.8",
-    "@angular/compiler-cli": "^6.0.4",
-    "@angular/language-service": "^6.0.4",
-    "@types/jasmine": "^2.8.8",
-    "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^10.3.2",
-    "codelyzer": "^4.3.0",
-    "jasmine-core": "^3.1.0",
+    "@angular-devkit/build-angular": "^0.10.7",
+    "@angular/cli": "^6.2.8",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
+    "@types/jasmine": "^2.8.12",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^10.12.12",
+    "codelyzer": "^4.5.0",
+    "jasmine-core": "^3.3.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^3.1.1",
+    "karma": "^3.1.3",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.1.0",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "^5.4.1",
-    "ts-node": "^6.1.0",
-    "tslint": "^5.10.0",
-    "typescript": "^2.7.2"
+    "ts-node": "^6.2.0",
+    "tslint": "^5.11.0",
+    "typescript": "^2.9.2"
   }
 }
