--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --vendor-chunk=true",
-    "deploy": "ssh citame.click 'rm -r /var/www/citame/widget/*' && scp -r dist/* citame.click:/var/www/citame/widget/",
+    "start-prod": "ng serve --prod --vendor-chunk=true",
+    "build-prod": "ng build --prod --vendor-chunk=true --base-href '/widget/prod/'",
+    "build-test": "ng build --vendor-chunk=true --base-href '/widget/test/'",
+    "deploy-test": "npm run build-test && ssh haicku.es 'rm -rf /var/www/citame/html/widget/test/*' && scp -r dist/* haicku.es:/var/www/citame/html/widget/test/",
+    "deploy-prod": "npm run build-prod && ssh haicku.es 'rm -rf /var/www/citame/html/widget/prod/*' && scp -r dist/* haicku.es:/var/www/citame/html/widget/prod/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e --environment=prod"
   },
   "private": true,
   "dependencies": {
-    "@angular-redux/store": "^9.0.0",
     "@angular/animations": "^6.1.10",
     "@angular/cdk": "^6.4.7",
     "@angular/common": "^6.1.10",
@@ -27,38 +29,33 @@
     "@angular/platform-browser-dynamic": "^6.1.10",
     "@angular/router": "^6.1.10",
     "angular-calendar": "^0.25.2",
-    "angularfire2": "^5.1.1",
-    "core-js": "^2.6.0",
-    "firebase": "^5.7.0",
+    "angularfire2": "^5.2.1",
+    "core-js": "^2.6.9",
+    "firebase": "^5.11.1",
     "font-awesome": "^4.7.0",
-    "redux": "^4.0.1",
-    "redux-localstorage": "^0.4.1",
-    "redux-logger": "^3.0.6",
-    "redux-observable": "^0.19.0",
-    "reselect": "^3.0.1",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.3.3",
-    "zone.js": "^0.8.26"
+    "rxjs": "^6.5.2",
+    "rxjs-compat": "^6.5.2",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.10.7",
-    "@angular/cli": "^6.2.8",
+    "@angular-devkit/build-angular": "^0.6.8",
+    "@angular/cli": "^6.2.9",
     "@angular/compiler-cli": "^6.1.10",
     "@angular/language-service": "^6.1.10",
-    "@types/jasmine": "^2.8.12",
+    "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^10.12.12",
+    "@types/node": "^10.14.12",
     "codelyzer": "^4.5.0",
-    "jasmine-core": "^3.3.0",
+    "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^3.1.3",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "^5.4.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "^5.4.2",
     "ts-node": "^6.2.0",
-    "tslint": "^5.11.0",
+    "tslint": "^5.18.0",
     "typescript": "^2.9.2"
   }
 }
